Updated preprocess and track method

--- a/sleap_utils_testing.ipynb
+++ b/sleap_utils_testing.ipynb
@@ -2815,7 +2815,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Main",
+   "display_name": "sleap_dev",
    "language": "python",
    "name": "python3"
   },
